--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+
+  body {
+    text-align: center;
+    background-color: #2f333d;
+    color: white;
+    min-height: 100%;
+  } 
+
 img {
   display: block;
 }
